--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -1,4 +1,4 @@
 <link rel="icon" href="/favicon.ico" type="image/svg+xml">
-
 <link rel="shortcut icon" href="/logo.svg" type="image/svg+xml">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="/css/alfolio.css">
