Apply code review suggestions for scroll-to-top button
- Add passive event listener for scroll events to improve performance
- Add type='button' attribute to prevent form submission behavior

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
     {%- include footer.html -%}
 
     <!-- Scroll to Top Button -->
-    <button class="scroll-to-top" id="scroll-to-top" aria-label="Scroll to top of page" tabindex="0">
+    <button type="button" class="scroll-to-top" id="scroll-to-top" aria-label="Scroll to top of page" tabindex="0">
       ↑
       <span class="sr-only">Scroll to top of page</span>
     </button>
